--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
 	<header>
 		<h1>Aashis prajapat</h1>
-		<button id="theme">light</button>
+		<button id="theme">Dark</button>
 	</header>
 	<div class="home">
 
 		<div class="content">
-			<h1> Wel come to <span>S&P Solutions</span></h1>
+			<h1> Welcome to <span>S&P Solutions</span></h1>
 			<h3>S&P Solutions: Your Partner in Digital Excellence</h3>
 
 			<p> At S&P Solutions, we craft innovative web solutions to boost your online presence. Our skilled team turns your ideas into reality, whether you're a startup or an established business. We offer tailored services, including web design, e-commerce, SEO, and digital marketing, all focused on making your brand stand out. We don’t just build websites; we create experiences that drive your business forward. Let's achieve digital excellence together!</p>
